--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,3 +1,5 @@
+@import 'themes.scss';
+
 header {
     background : darkcyan;
     color : white;
@@ -10,7 +12,7 @@ header {
 }
 
 .content {
-    display: flex;
+    
 }
 
 main{
@@ -24,7 +26,26 @@ aside{
 .paper {
     min-height: 200px;
     padding: 16px;
+    margin:32px;
     text-align: center;
     color: black,
 }
-  
+
+.myTweetPaper{
+    display:flex;
+    height : auto;
+    padding: 16px;
+    margin:32px;
+    color: black;
+}
+
+.sampleBtn {
+    @include themify($themes) {
+      color: themed('textColor');  
+      background-color: themed('backgroundColor');  
+      
+      &:hover{
+          background-color: themed('backgroundHoverColor')
+      }
+    }
+}
