--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,14 +1,23 @@
+@import 'themes.scss';
+
 .App {
     text-align: center;
   }
   
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
+.appBar{
+  @include themify($themes) {
+    color: themed('textColor');  
+    background-color: themed('backgroundColor');  
   }
-  
-  @keyframes App-logo-spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
-  }
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
   
