--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -34,13 +34,13 @@ aside{
     margin:32px;
 }
 
-.writingTweetPaper{
+.writingFeedPaper {
     display: flex;
     height:56px;
     margin:32px;
 }
 
-.tweetlistHeader{
+.newsfeedHeader {
     font-size: 1.5rem;
     padding:24px;
     text-align: start;
