--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,8 +16,18 @@
   }
 }
 
+.app-title-layout {
+  width: 100%;
+
+  .github-link {
+    color: white;
+    font-weight: 500;
+    text-decoration: none;
+    float: right;
+  }
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-  
