--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -13,12 +13,12 @@ $themes: (
     backgroundColor: #424242,
     subBackgroundColor : #EEEEEE,
     backgroundHoverColor : #616161,
-    textColor: #ddd,
+    textColor: white,
     subTextColor : #424242,
     buttonTextColor: #aaa,
     buttonTextTransform: uppercase,
     buttonTextHoverColor: #ddd,
-    buttonColor: #333,
+    buttonColor: #0277BD,
     buttonBorder: 1px solid #333,
   ),
 );
